3.7
 * Support multiple folders for user defined compaction tasks (CASSANDRA-11765)
 * Fix race in CompactionStrategyManager's pause/resume (CASSANDRA-11922)
Merged from 3.x:
 * Exception when computing read-repair for range tombstones (CASSANDRA-12263)
 * Cache local ranges when calculating repair neighbors (CASSANDRA-11933)
 * Don't try to get sstables for non-repairing column families (CASSANDRA-12077)
 * Avoid sstable corrupt exception due to dropped static column (CASSANDRA-12582)
 * NullPointerException during compaction on table with static columns (CASSANDRA-12336)
 * NullPointerExpception when reading/compacting table (CASSANDRA-11988)
Merged from 3.0:
 * Correct log message for statistics of offheap memtable flush (CASSANDRA-12776)
 * Fix potential socket leak (CASSANDRA-12329, CASSANDRA-12330)
 * Fix legacy serialization of Thrift-generated non-compound range tombstones
   when communicating with 2.x nodes (CASSANDRA-11930)
 * Fix Directories instantiations where CFS.initialDirectories should be used (CASSANDRA-11849)
 * Avoid referencing DatabaseDescriptor in AbstractType (CASSANDRA-11912)
 * Don't use static dataDirectories field in Directories instances (CASSANDRA-11647)
 * Fix sstables not being protected from removal during index build (CASSANDRA-11905)
 * cqlsh: Suppress stack trace from Read/WriteFailures (CASSANDRA-11032)
 * Remove unneeded code to repair index summaries that have
   been improperly down-sampled (CASSANDRA-11127)
 * Avoid WriteTimeoutExceptions during commit log replay due to materialized
   view lock contention (CASSANDRA-11891)
 * Prevent OOM failures on SSTable corruption, improve tests for corruption detection (CASSANDRA-9530)
 * Use CFS.initialDirectories when clearing snapshots (CASSANDRA-11705)
 * Allow compaction strategies to disable early open (CASSANDRA-11754)
 * Refactor Materialized View code (CASSANDRA-11475)
 * Update Java Driver (CASSANDRA-11615)