@@ -42,6 +42,7 @@ We will keep an eye on the issues page of this github repository and try to help
 * https://issues.apache.org/jira/browse/CASSANDRA-12329[12329: Fix unreleased resource sockets]
 * https://issues.apache.org/jira/browse/CASSANDRA-12330[12330: Fix unreleased resource sockets]
 * https://issues.apache.org/jira/browse/CASSANDRA-12263[12263: Exception when computing read-repair for range tombstones]
+* https://issues.apache.org/jira/browse/CASSANDRA-13337[13337: Dropping column results in "corrupt" SSTable]
 
 We are also working to backport additional patches that we see as required, however this is an ongoing process and there will always be fixes that "need" to be backported that we haven't done yet. We will tag commits with a minor version number for releases that we are ourselves running in production clusters. E.g. 3.7.1. Build artefacts will not be release builds and as such you will see this in the version numbers reported in various places by Cassandra.
 
